--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,49 +31,18 @@
         "missing-global-doc",
         "missing-local-export-doc",
         "param-type-mismatch",
-        "redundant-parameter"
+        "redundant-parameter",
+        "invisible",
+        "missing-parameter",
+        "assign-type-mismatch",
+        "redefined-local"
     ],
     "Lua.diagnostics.ignoredFiles": "Disable",
     "Lua.diagnostics.libraryFiles": "Disable",
     "Lua.runtime.version": "Lua 5.1",
-    "Lua.runtime.plugin": "/root/ESOUI HavokScript Support/.vscode/plugin.lua",
+    "Lua.runtime.plugin": "/home/dack_janiels/vscode-eso/.vscode/plugin.lua",
     "Lua.workspace.library": [
-        "/root/ESOUI HavokScript Support/.vscode/",
-        "/root/ESOUI HavokScript Support/enum.lua",
-        "/root/ESOUI HavokScript Support/eso-api.classes.lua",
-        "/root/ESOUI HavokScript Support/eso-api_base_Manual_NonGenerated.lua",
-        "/root/ESOUI HavokScript Support/eso-api_events.lua",
-        "/root/ESOUI HavokScript Support/eso-api_game.lua",
-        "/root/ESOUI HavokScript Support/eso-api_globals.lua",
-        "/root/ESOUI HavokScript Support/eso-api_object_userdata.test.lua",
-        "/root/ESOUI HavokScript Support/eso-api_userdata.lua",
-        "/root/ESOUI HavokScript Support/eso-control.lua",
-        "/root/ESOUI HavokScript Support/esoui-types.lua",
-        "/root/ESOUI HavokScript Support/forvscode.lua",
-        "/root/ESOUI HavokScript Support/main.lua",
-        "/root/ESOUI HavokScript Support/StackTracePlus.lua",
-        "/root/ESOUI HavokScript Support/test.lua",
-        "/root/ESOUI HavokScript Support/WindowManager.lua",
-        "/root/ESOUI HavokScript Support/XML.lua",
-        "/root/ESOUI HavokScript Support/esoui/app/",
-        "/root/ESOUI HavokScript Support/esoui/appandingame/",
-        "/root/ESOUI HavokScript Support/esoui/common/",
-        "/root/ESOUI HavokScript Support/esoui/fontdefs/",
-        "/root/ESOUI HavokScript Support/esoui/fontstrings/",
-        "/root/ESOUI HavokScript Support/esoui/ingame/",
-        "/root/ESOUI HavokScript Support/esoui/ingamelocalization/",
-        "/root/ESOUI HavokScript Support/esoui/internalingame/",
-        "/root/ESOUI HavokScript Support/esoui/internalingamelocalization/",
-        "/root/ESOUI HavokScript Support/esoui/lang/",
-        "/root/ESOUI HavokScript Support/esoui/libraries/",
-        "/root/ESOUI HavokScript Support/esoui/overlay/",
-        "/root/ESOUI HavokScript Support/esoui/pregame/",
-        "/root/ESOUI HavokScript Support/esoui/pregameandingame/",
-        "/root/ESOUI HavokScript Support/esoui/pregameandinternalingame/",
-        "/root/ESOUI HavokScript Support/esoui/pregamelocalization/",
-        "/root/ESOUI HavokScript Support/esoui/publicallingames/",
-        "/root/PerfectPixel/",
-        "/root/.vscode-server-insiders/data/User/globalStorage/sumneko.lua/addonManager/addons/lldebugger/module/library"
+        "/home/dack_janiels/vscode-eso/"
     ],
     "Lua.runtime.special": {
         "require": "require"
