--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ indent_size = 2
 # if indent_style is tab, this is valid
 tab_width = 2
 # none/single/double
-quote_style = none
+quote_style = single
 
 continuation_indent = 4
 ## extend option
